{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 70,
  "lineage": "fb73fbf6-4d66-766a-8fff-c0f041680ce0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083682622795:internet-gateway/igw-07e866c1464ef3b56",
            "id": "igw-07e866c1464ef3b56",
            "owner_id": "083682622795",
            "tags": {
              "Name": "main_gw"
            },
            "vpc_id": "vpc-0482281be8876441a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hy_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083682622795:loadbalancer/app/Hycloud-alb/3b94dfe7041a288f",
            "arn_suffix": "app/Hycloud-alb/3b94dfe7041a288f",
            "dns_name": "Hycloud-alb-632486594.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:083682622795:loadbalancer/app/Hycloud-alb/3b94dfe7041a288f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Hycloud-alb",
            "security_groups": [
              "sg-067feddcdf2f8392e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ff8f0b483cd20da"
              },
              {
                "subnet_id": "subnet-0cb84ad6579ba32ae"
              }
            ],
            "subnets": [
              "subnet-06ff8f0b483cd20da",
              "subnet-0cb84ad6579ba32ae"
            ],
            "tags": {
              "Name": "hycloud_alb"
            },
            "vpc_id": "vpc-0482281be8876441a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_sub1",
            "aws_subnet.public_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "entry_443_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083682622795:listener/app/Hycloud-alb/3b94dfe7041a288f/5771527eeacffaa8",
            "certificate_arn": "arn:aws:acm:us-east-1:083682622795:certificate/29c66e4d-f618-4d50-b7aa-8e3f7ad9c9d1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:083682622795:targetgroup/hycloud-tg-lb-tg/21996808748102df",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083682622795:listener/app/Hycloud-alb/3b94dfe7041a288f/5771527eeacffaa8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:083682622795:loadbalancer/app/Hycloud-alb/3b94dfe7041a288f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_lb.hy_alb",
            "aws_lb_target_group.hycloud_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_sub1",
            "aws_subnet.public_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "entry_80_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083682622795:listener/app/Hycloud-alb/3b94dfe7041a288f/5c7bc34b665bc30b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083682622795:listener/app/Hycloud-alb/3b94dfe7041a288f/5c7bc34b665bc30b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:083682622795:loadbalancer/app/Hycloud-alb/3b94dfe7041a288f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hy_alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public_sub1",
            "aws_subnet.public_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hycloud_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:083682622795:targetgroup/hycloud-tg-lb-tg/21996808748102df",
            "arn_suffix": "targetgroup/hycloud-tg-lb-tg/21996808748102df",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:083682622795:targetgroup/hycloud-tg-lb-tg/21996808748102df",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hycloud-tg-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0482281be8876441a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "vpc_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e5ecedf564ade6a",
            "original_route_table_id": "rtb-09471c640255123bb",
            "route_table_id": "rtb-05f46c5c4a314e602",
            "vpc_id": "vpc-0482281be8876441a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rout_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rout_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05f46c5c4a314e602",
            "owner_id": "083682622795",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e866c1464ef3b56",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_rt"
            },
            "vpc_id": "vpc-0482281be8876441a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083682622795:security-group/sg-067feddcdf2f8392e",
            "description": "Allow TLS/80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067feddcdf2f8392e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Hycloud_sg",
            "name_prefix": "",
            "owner_id": "083682622795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0482281be8876441a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083682622795:security-group/sg-0061f93fb347c1a5a",
            "description": "Allow 80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0061f93fb347c1a5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance_sg",
            "name_prefix": "",
            "owner_id": "083682622795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0482281be8876441a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083682622795:subnet/subnet-0cb84ad6579ba32ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0cb84ad6579ba32ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083682622795",
            "tags": {
              "Name": "hy_public_sub1"
            },
            "vpc_id": "vpc-0482281be8876441a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083682622795:subnet/subnet-06ff8f0b483cd20da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06ff8f0b483cd20da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083682622795",
            "tags": {
              "Name": "hy_public_sub2"
            },
            "vpc_id": "vpc-0482281be8876441a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:083682622795:vpc/vpc-0482281be8876441a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084bbd0d0229a011f",
            "default_route_table_id": "rtb-09471c640255123bb",
            "default_security_group_id": "sg-0bd549b0cae2c6f9d",
            "dhcp_options_id": "dopt-09d45e6f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0482281be8876441a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09471c640255123bb",
            "owner_id": "083682622795",
            "tags": {
              "Department": "Production Engineering",
              "Name": "main_vpc",
              "Today": "Lesson12"
            }
          }
        }
      ]
    }
  ]
}